# smartcommit---ai-git-commit-generator

./: README.md  pyproject.toml
src/smartcommit/: __init__.py  cli.py  commit_generator.py  config.py  git_utils.py
